# uksupermarketcompare

./: .env.example  AGENTS.md  LIVE_DATA_NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml
UKSupermarketCompare/: UKSupermarketCompareApp.swift
UKSupermarketCompare.xcodeproj/: project.pbxproj
UKSupermarketCompare/Models/: AppDataSourceStatus.swift  AppRoute.swift  BasketComparison.swift  GroceryCatalogItem.swift  ShoppingItem.swift  ShoppingList.swift  Supermarket.swift
UKSupermarketCompare/Resources/: GroceryCatalogSeed.json
UKSupermarketCompare/Services/: BasketComparisonService.swift  GroceryCatalogService.swift  LiveSupermarketDataService.swift  MockSupermarketDataService.swift  ShoppingListStore.swift
UKSupermarketCompare/ViewModels/: AppCoordinatorViewModel.swift  BasketComparisonResultsViewModel.swift  CreateShoppingListViewModel.swift  HomeViewModel.swift  SavedListsViewModel.swift  SupermarketSelectionViewModel.swift
UKSupermarketCompare/Views/: AppDesignSystem.swift  BasketComparisonResultsView.swift  BrandKit.swift  CreateShoppingListView.swift  DataSourceDebugView.swift  HomeView.swift  SavedListDetailView.swift  SavedListsView.swift  SupermarketSelectionView.swift
backend/: README.md  requirements.txt
backend/app/: db.py  main.py  models.py  persistent_models.py
backend/scripts/: import_catalog.py
backend/tests/: conftest.py  (+18 more)
basketcompare/: __init__.py  admin.py  comparison.py  fixtures.py  matching.py  models.py  normalization.py  providers.py  ui.py
frontend/: capacitor.config.ts  package.json
tests/: test_phase2.py
(+44 files in other folders)
